[package]
name = "rust-defender-api"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
powershell_script = "1.0.4"
anyhow = "1.0.58"
tokio = { version = "1.20.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.36"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"